<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/addLayoutup"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/rectangle_up"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/add_button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/close"
            android:src="@drawable/searchwallet_close_button" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/addLayoutup"
        android:background="@color/test_fon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="70dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:id="@+id/but"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/q3">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/found"
                            android:textColor="@color/test_fon"
                            android:textSize="30sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="100dp"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="20dp">

                    <RelativeLayout
                        android:id="@+id/but2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/q4">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text="@string/lost"
                            android:textColor="@color/test_fon"
                            android:fontFamily="@font/roboto_regular"
                            android:textSize="30sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>